<resources>
    <string name="app_name">bandeirax</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="register">Não tem uma conta? Registre-se</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_back">Voltar</string>
    <string name="play">jogar</string>
    <string name="Leaderboards">Placar de Líderes</string>
    <string name="Profile">Perfil</string>
    <string name="Administration">Administração</string>
    <string name="btn_save">Salvar</string>
    <string name="title_profile">Perfil</string>
    <string name="logout">logout</string>
</resources>