<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnLeaderboards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Leaderboards"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Profile"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnAdministration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Administration"/>

</LinearLayout>
