<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.ProfileActivity">

    <EditText
        android:id="@+id/edtName_up"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edtEmail_up"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edtPassword_up"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="82dp"
        android:layout_marginStart="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="16dp"
            android:onClick="updateUser"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="16dp"
            android:onClick="logout"
            android:text="@string/logout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>
